Scatterplot, Bar and Pie Chart amendments

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-  "extends": ["eslint:standard", "plugin:react/recommended"],
+  "extends": [
+  	"eslint:standard",
+  	"plugin:react/recommended"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
