--- a/package.json
+++ b/package.json
@@ -31,10 +31,18 @@
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-easy-chart": "^0.1.4",
+    "react-faux-dom": "^2.5.0",
     "react-router": "^2.5.2",
     "react-routes-renderer": "^1.1.1",
     "vision": "^4.0.1",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "d3": "^3.5.17",
+    "d3-array": "^0.8.1",
+    "d3-scale": "^0.9.3",
+    "d3-shape": "^0.7.1",
+    "d3-time-format": "^0.4.0",
+    "lodash.merge": "^4.0.1",
+    "radium": "^0.17.1"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
