--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^1.3.2",
     "gulp": "^3.8.11",
+    "gulp-clean": "^0.3.2",
     "gulp-develop-server": "^0.5.1",
     "gulp-jshint": "^2.0.1",
     "gulp-sourcemaps": "^1.6.0",
