--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "NODE_ENV=production && node app",
     "build": "gulp",
-    "dev": "npm run build"
+    "dev": "npm run build",
+    "eslint": "eslint ./client/app ./client/src"
   },
   "author": {
     "name": "jonathan Perry from Sequence Media Limited",
@@ -60,7 +61,7 @@
     "babel-preset-stage-1": "^6.3.13",
     "babel-register": "^6.9.0",
     "babel-runtime": "^6.9.2",
-    "eslint-config-standard": "^5.3.1",
+    "eslint-config-standard": "^5.3.5",
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^1.3.2",
@@ -71,9 +72,14 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-uglifycss": "^1.0.5",
+    "jsdom": "^9.4.1",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
+    "react": "^15.2.1",
+    "react-motion": "^0.4.4",
     "standard": "^7.1.2",
+    "velocity-animate": "^1.2.3",
+    "velocity-react": "^1.1.5",
     "webpack": "^1.12.13",
     "webpack-stream": "^3.2.0"
   }
