--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
+    "animation-frame": "^0.3.0",
     "boom": "^3.2.2",
+    "d3": "^3.5.17",
+    "jsdom": "^9.4.1",
+    "d3-array": "^0.8.1",
+    "d3-scale": "^0.9.3",
+    "d3-shape": "^0.7.1",
+    "d3-time-format": "^0.4.0",
     "good": "^7.0.1",
     "good-console": "^6.1.2",
     "good-squeeze": "^4.0.0",
@@ -28,25 +35,23 @@
     "http-proxy": "^1.14.0",
     "http-request": "^0.7.0",
     "inert": "^4.0.1",
+    "lodash.merge": "^4.0.1",
     "nconf": "^0.8.4",
-    "react": "^15.2.0",
+    "popmotion": "^5.0.15",
+    "radium": "^0.17.1",
+    "react": "^15.2.1",
     "react-dom": "^15.2.0",
     "react-easy-chart": "^0.1.4",
     "react-faux-dom": "^2.5.0",
     "react-router": "^2.5.2",
     "react-routes-renderer": "^1.1.1",
+    "react-motion": "^0.4.4",
+    "velocity-animate": "^1.2.3",
+    "velocity-react": "^1.1.5",
     "vision": "^4.0.1",
-    "webpack": "^1.13.1",
-    "d3": "^3.5.17",
-    "d3-array": "^0.8.1",
-    "d3-scale": "^0.9.3",
-    "d3-shape": "^0.7.1",
-    "d3-time-format": "^0.4.0",
-    "lodash.merge": "^4.0.1",
-    "radium": "^0.17.1"
+    "webpack": "^1.13.1"
   },
   "devDependencies": {
-    "animation-frame": "^0.3.0",
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
@@ -72,14 +77,9 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-uglifycss": "^1.0.5",
-    "jsdom": "^9.4.1",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
-    "react": "^15.2.1",
-    "react-motion": "^0.4.4",
     "standard": "^7.1.2",
-    "velocity-animate": "^1.2.3",
-    "velocity-react": "^1.1.5",
     "webpack": "^1.12.13",
     "webpack-stream": "^3.2.0"
   }
